--- a/Manager/review.html
+++ b/Manager/review.html
@@ -13,38 +13,34 @@
     <div class="sidebar">
         <div class="sidediv">
             <ul>
-                <li><a href="#"></a><i class="fa-solid fa-house"></i>Home</li>
-                <li><a href="#"></a><i class="fa-solid fa-note-sticky"></i>To-Do</li>
-                <li><a href="#"></a><i class="fa-regular fa-comment"></i>Messages</li>
-                <li><a href="#"></a><i class="fa-regular fa-file"></i>History</li>
-                <li><a href="#"></a><i class="fa-solid fa-gear"></i>Settings</li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#"><i class="fa-solid fa-note-sticky"></i>To-Do</a></li>
+                <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
+                <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
+                <li><a href="/profile.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
                 <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
             </ul>
         </div>
     </div>
     <h1>Tickets</h1>
-    <div id="rectangle-1">
-        <div class="popup" id="popup">
-            <div id="rectangle-2">Assign</div>
-            <div id="rectangle-3"></div>
-            <div id="rectangle-4"></div>
-        </div>
+    <div class="rectangle-1">
+        <table class="list_review" id="employeeList">
+            <thead>
+                <tr>
+                    <th>Profile</th>
+                    <th>Title</th>
+                    <th>Complaint</th>
+                </tr>
+            </thead>
+
+            <tbody class="title_body">
+                <tr>
+
+                </tr>
+            </tbody>
+        </table>
+
     </div>
-
-    <table class="list_review" id="employeeList">
-        <thead>
-            <tr>
-                <th>Profile</th>
-                <th>Title</th>
-                <th>Complaint</th>
-            </tr>
-        </thead>
-
-        <tbody>
-
-
-        </tbody>
-    </table>
     
 
     <script src="/JS/review.js"></script>
