--- a/History.html
+++ b/History.html
@@ -23,7 +23,7 @@
                         <li><a href="#"><i class="fa-solid fa-note-sticky"></i>To-Do</a></li>
                         <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
                         <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
-                        <li><a href="#" ><i class="fa-solid fa-gear"></i>Settings</a></li>
+                        <li><a href="/profile.html" ><i class="fa-solid fa-gear"></i>Profile</a></li>
                         <li><a href="Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
