--- a/Home.html
+++ b/Home.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaTech</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <meta name="description" content="MaTech - Sign up as Client, Technician, or Manager">
     <link rel="stylesheet" href="css/Home.css">
    
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav>
-        <a href="#" aria-label="About Us">About</a>
-        <a href="#" aria-label="Contact Us">Contact</a>
+      <!-- Navbar -->
+      <nav class="navbar">
+        <div class="navdiv">
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-circle-info"></i> About</a></li>
+                <li><a href="#"><i class="fa-regular fa-address-book"></i> Contact</a></li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Main Section -->
