--- a/Client/dashboard-client.html
+++ b/Client/dashboard-client.html
@@ -15,11 +15,11 @@
             <div class="sidediv">
                 <ul>
                     <li><a href="#"></a><i class="fa-solid fa-house"></i>Home</li>
-                    <li><a href="#"></a><i class="fa-solid fa-note-sticky"></i>To-Do</li>
+                    <li><a href="ticket.html"><i class="fa-solid fa-note-sticky"></i>Request</a></li>
                     <li><a href="#"></a><i class="fa-regular fa-comment"></i>Messages</li>
                     <li><a href="#"></a><i class="fa-regular fa-file"></i>History</li>
                     <li><a href="/profile.html"></a><i class="fa-solid fa-gear"></i>Profile</li>
-                    <li><a href="/Home.html"></a><i class="fa-solid fa-right-from-bracket"></i>Logout</li>
+                    <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                 </ul>
             </div>
         </div>
