--- a/Home.html
+++ b/Home.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaTech</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <meta name="description" content="MaTech - Sign up as Client, Technician, or Manager">
-    <link rel="stylesheet" href="css/Home.css">
-   
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="/css/Home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+   </head>
 <body>
 
-      <!-- Navbar -->
-      <nav class="navbar">
+    <!-- Navbar -->
+    <nav class="navbar">
         <div class="navdiv">
             <ul>
                 <li><a href="#"><i class="fa-solid fa-circle-info"></i> About</a></li>
