--- a/Home.html
+++ b/Home.html
@@ -1,19 +1,22 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaTech</title>
+    <link rel="stylesheet" href="/css/Home.css">
     <meta name="description" content="MaTech - Sign up as Client, Technician, or Manager">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link rel="stylesheet" href="/css/Home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-   </head>
+    <style>
+
+    </style>
+</head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar">
+      <nav class="navbar">
         <div class="navdiv">
             <ul>
                 <li><a href="#"><i class="fa-solid fa-circle-info"></i> About</a></li>
@@ -22,26 +25,29 @@
         </div>
     </nav>
 
-    <!-- Main Section -->
-    <div class="main-section">
-        <img src="Image/MatechImg.png" alt="MaTech Logo">
+        <div class="main-section">
+        <img src="/Image/MatechImg.png" alt="MaTech Logo" border="0">
     </div>
 
-    <!-- Sign-up Buttons -->
-    <div class="signup-container">
+   <div class="signup-container">
         <div class="signup-box">
             <h3>Sign Up As</h3>
-            <a href="register.html">Client</a>
+            <a href="register.html?role=Client">Client</a>
         </div>
         <div class="signup-box technician">
             <h3>Sign Up As</h3>
-            <a href="register.html">Technician</a>
+            <a href="register.html?role=Technician">Technician</a>
         </div>
         <div class="signup-box">
             <h3>Sign Up As</h3>
-            <a href="register.html">Manager</a>
+            <a href="register.html?role=Manager">Manager</a>
         </div>
     </div>
 
+
+
 </body>
 </html>
+
+
+
