--- a/register.html
+++ b/register.html
@@ -20,6 +20,7 @@
                 </div>
             </nav>
             <div class="container">
+                <img src="/Image/gear.gif" alt="gear">
                 <div class="form-box">
                     <h3 class="title1">Register</h3>
                     <form autocomplete="off">
