--- a/Home.html
+++ b/Home.html
@@ -1,21 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaTech</title>
-    <link rel="stylesheet" href="/css/Home.css">
-    <meta name="description" content="MaTech - Sign up as Client, Technician, or Manager">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
-    <style>
-
-    </style>
+    <meta name="description" content="MaTech - Sign up as Client, Technician, or Manager">
+    <link rel="stylesheet" href="css/Home.css">
+   
 </head>
 <body>
 
+      <!-- Navbar -->
       <nav class="navbar">
         <div class="navdiv">
             <ul>
@@ -25,11 +21,13 @@
         </div>
     </nav>
 
-        <div class="main-section">
-        <img src="/Image/MatechImg.png" alt="MaTech Logo" border="0">
+    <!-- Main Section -->
+    <div class="main-section">
+        <img src="Image/MatechImg.png" alt="MaTech Logo">
     </div>
 
-   <div class="signup-container">
+    <!-- Sign-up Buttons -->
+    <div class="signup-container">
         <div class="signup-box">
             <h3>Sign Up As</h3>
             <a href="register.html?role=Client">Client</a>
@@ -44,10 +42,5 @@
         </div>
     </div>
 
-
-
 </body>
 </html>
-
-
-
