--- a/Technician/to-do.html
+++ b/Technician/to-do.html
@@ -31,6 +31,7 @@
                     <th>Profile</th>
                     <th>Title</th>
                     <th>Complaint</th>
+                    <th>Where</th>
                 </tr>
             </thead>
 
