--- a/Manager/review.html
+++ b/Manager/review.html
@@ -26,7 +26,6 @@
 
     <h1>Tickets</h1>
 
-    <!-- Tickets Table -->
     <div class="rectangle-1">
         <table class="list_review" id="employeeList">
             <thead>
@@ -40,35 +39,31 @@
                 </tr>
             </thead>
             <tbody class="title_body">
-                <!-- Tickets will be populated here by JS -->
+                <!-- Tickets will be dynamically inserted here -->
             </tbody>
         </table>
     </div>
 
-    <!-- Loading Message for Technician Dropdown -->
-    <div id="loadingTechnicians" style="display: none; text-align: center; font-size: 16px; color: #555;">
-        Loading technicians...
-    </div>
-
     <!-- Review Modal -->
-    <div id="reviewModal" style="display: none;">
+    <div id="reviewModal" class="modal">
         <div class="modal-content">
-            <span id="closeModal">&times;</span>
+            <span id="closeModal" class="close">&times;</span>
             <h2>Review Ticket</h2>
             <p><strong>Username:</strong> <span id="modalUsername"></span></p>
             <p><strong>Title:</strong> <span id="modalTitle"></span></p>
             <p><strong>Content:</strong> <span id="modalContent"></span></p>
-            <p><strong>Submitted at:</strong> <span id="modalTimestamp"></span></p>
-            <p><strong>Technician:</strong> <span id="modalTechnician"></span></p>
-            <img id="modalTechnicianImage" src="" alt="Technician Image" style="width: 50px; height: 50px; border-radius: 50%;">
-            
-            <label for="technicianSelect">Assign Technician:</label>
-            <select id="technicianSelect">
-                <option value="">Choose Technician</option>
-            </select>
-            
-            <button id="confirmTechnicianButton">Confirm Technician</button>
+            <p><strong>Time Submitted:</strong> <span id="modalTimestamp"></span></p>
+            <p><strong>Assigned Technician:</strong> <span id="modalTechnician"></span> <img id="modalTechnicianImage" src="" alt="Technician" style="width: 50px; border-radius: 50%;"></p>
+            <div>
+                <label for="technicianSelect">Assign Technician:</label>
+                <select id="technicianSelect">
+                    <!-- Technicians will be dynamically loaded here -->
+                </select>
+            </div>
+            <button id="confirmTechnicianButton">Assign Technician</button>
         </div>
     </div>
+
+    <script type="module" src="/JS/review.js"></script>
 </body>
 </html>
