--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,23 +7,27 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  </head>
+
+</head>
 
     <body>
-        <div class="sidebar">
-            <div class="sidediv">
-                <ul>
-                    <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
-                    <li><a href="#"><i class="fa-solid fa-note-sticky"></i>To-Do</a></li>
-                    <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
-                    <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
-                    <li><a href="#"><i class="fa-solid fa-gear"></i>Profile</a></li>
-                    <li><a href="#"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
-                </ul>
+        <div class="sidebar-wrapper">
+            <div class="sidebar">
+                <div class="sidediv">
+                    <ul>
+                        <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                        <li><a href="#"><i class="fa-solid fa-note-sticky"></i>To-Do</a></li>
+                        <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
+                        <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
+                        <li class="active">
+                            <a href="#"><i class="fa-solid fa-gear"></i>Profile</a>
+                        </li>
+                        <li><a href="Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
             <div class="content">
-
                 <div class="container light-style flex-grow-1 container-p-y">
                     <div class="card overflow-hidden">
                         <div class="row no-gutters row-bordered row-border-light">
