--- a/Client/dashboard-client.html
+++ b/Client/dashboard-client.html
@@ -25,11 +25,11 @@
                 <div class="sidediv">
                     <ul>
                         <li class="active"><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
-                        <li><a href="#"><i class="fa-solid fa-note-sticky"></i>Request</a></li>
+                        <li><a href="ticket.html"><i class="fa-solid fa-note-sticky"></i>Request</a></li>
                         <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
-                        <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
-                        <li><a href="profile.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
-                        <li><a href="Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                        <li><a href="history_client.html"><i class="fa-regular fa-file"></i>History</a></li>
+                        <li><a href="client_prof.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
+                        <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
