--- a/Manager/manager_dash.html
+++ b/Manager/manager_dash.html
@@ -4,28 +4,24 @@
         <meta charset="UTF-8">
         <meta NAME="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-        <link rel="stylesheet" href="/css/client_dash.css">
+        <link rel="stylesheet" href="/css/manager-dash.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <style>
-            
+           
         </style>
     </head>
-
-
-
-
     <body>
         <div class="sidebar-wrapper">
             <div class="sidebar">
                 <div class="sidediv">
                     <ul>
-                        <li class="active"><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                        <li class="active"><a href="manager_hist.html"><i class="fa-solid fa-house"></i>Home</a></li>
                         <li><a href="#"><i class="fa-solid fa-note-sticky"></i>Manage</a></li>
                         <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
-                        <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
-                        <li><a href="profile.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
-                        <li><a href="Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                        <li><a href="manager_hist.html"><i class="fa-regular fa-file"></i>History</a></li>
+                        <li><a href="manager_prof.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
+                        <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,10 +39,10 @@
                 <div id="separate"></div>
                 <div id="separate-2"></div>
                 <div class="section">
-                    <h3>Active Technicians:</h3>
+                    <h3>Current Request:</h3>
                 </div>
                 <div class="section">
-                    <h3>Active Issues:</h3>
+                    <h3>Assigned Technician:</h3>
                 </div>
                 <div class="section">
                     <h3 id="updatestatus">Current Status:</h3>
