--- a/Technician/hist_tech.html
+++ b/Technician/hist_tech.html
@@ -5,17 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-        <link rel="stylesheet" href="css/Matech.css">
+        <link rel="stylesheet" href="/css/hist_tech.css">
     </head>
     <body>
         <div class="sidebar-wrapper">
             <div class="sidebar">
                 <div class="sidediv">
                     <ul>
-                        <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
-                        <li><a href="#"><i class="fa-solid fa-note-sticky"></i>To-Do</a></li>
+                        <li><a href="/Technician/Tech-dash.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                        <li><a href="/Technician/to-do.html"><i class="fa-solid fa-note-sticky"></i>To-Do</a></li>
                         <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
-                        <li><a href="#"><i class="fa-regular fa-file"></i>History</a></li>
+                        <li class="active">
+                            <a href="History.html"><i class="fa-regular fa-file"></i>History</a>
+                        </li>
                         <li><a href="profile.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
                         <li><a href="Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
@@ -40,4 +42,3 @@
         </div>
     </body>
 </html>
-
