--- a/Client/history_client.html
+++ b/Client/history_client.html
@@ -19,7 +19,7 @@
                             <a href="history_client.html"><i class="fa-regular fa-file"></i>History</a>
                         </li>
                         <li><a href="client_prof.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
-                        <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                        <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
