--- a/Manager/manager_hist.html
+++ b/Manager/manager_hist.html
@@ -20,7 +20,7 @@
                             <a href="manager_hist.html"><i class="fa-regular fa-file"></i>History</a>
                         </li>
                         <li><a href="manager_prof.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
-                        <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                        <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
