--- a/Manager/manager_prof.html
+++ b/Manager/manager_prof.html
@@ -23,7 +23,7 @@
                         <li class="active">
                             <a href="manager_prof.html"><i class="fa-solid fa-gear"></i>Profile</a>
                         </li>
-                        <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                        <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
