--- a/Manager/review.html
+++ b/Manager/review.html
@@ -19,7 +19,7 @@
                 <li><a href="#"><i class="fa-regular fa-comment"></i>Messages</a></li>
                 <li><a href="manager_hist.html"><i class="fa-regular fa-file"></i>History</a></li>
                 <li><a href="manager_prof.html"><i class="fa-solid fa-gear"></i>Profile</a></li>
-                <li><a href="/Home.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
             </ul>
         </div>
     </div>
