--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- Main Section -->
     <div class="main-section">
-        <img src="Image/MatechImg.png" alt="MaTech Logo">
+        <img src="/Image/MatechImg.png" alt="MaTech Logo">
     </div>
 
 
