--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                         <h2 class="title">or continue with</h2>
                         <button type="button" class="google"><img src="Image/pngwing.com.png" alt="">Sign Up with Google</button>
 
-                        <p class="signup">Have an Account? <a href="login.html" style="text-decoration: underline;">Sign In Now</a>.</p>
+                        <p class="signup">Have an Account? <a href="Login.html" style="text-decoration: underline;">Sign In Now</a>.</p>
                     </form>  
                 </div>
             </div>
