--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <meta name="description" content="MaTech - Sign up as Client, Technician, or Manager">
-    <link rel="stylesheet" href="css/Home.css">
+    <link rel="stylesheet" href="css/index.css">
     <style>
         
     </style>
@@ -50,7 +50,7 @@
 
     <!-- Main Section -->
     <div class="main-section">
-        <img src="/Image/MatechImg.png" alt="MaTech Logo">
+        <img src="Image/MatechImg.png" alt="MaTech Logo">
     </div>
 
 
