--- a/Technician/Tech-dash.html
+++ b/Technician/Tech-dash.html
@@ -4,12 +4,9 @@
         <meta charset="UTF-8">
         <meta NAME="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-        <link rel="stylesheet" href="/css/tech-dash.css">
+        <link rel="stylesheet" href="../css/tech-dash.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-        <style>
-            
-        </style>
     </head>
 
 
