--- a/Client/client_prof.html
+++ b/Client/client_prof.html
@@ -22,7 +22,7 @@
                         <li class="active">
                             <a href="client_prof.html"><i class="fa-solid fa-gear"></i>Profile</a>
                         </li>
-                        <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
+                        <li><a href="../index.html"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
